Fix images on smaller devices

--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -7,13 +7,12 @@ main {
     width: auto;
     height: 100%;
     .gallery {
-      margin-top: 64px;
+      margin-top: 4rem;
       display: grid;
       grid-template-columns: 1fr 1fr;
-      grid-auto-rows: calc(100vh) px;
-      gap: 32px 16px;
+      gap: 2rem 1rem;
       align-items: center;
-      @media (max-width: 768px) {
+      @media (max-width: $tablet) {
         grid-template-columns: 1fr;
       }
       .image-container {
@@ -29,10 +28,11 @@ main {
           margin-bottom: 10px;
           .img-link {
             img {
+              display: block;
               transition: transform 0.5s cubic-bezier(0.43, 0.13, 0.23, 0.96);
-
-              width: 524px;
-              height: 650px;
+              max-width: 524px;
+              max-height: 650px;
+              width: 100%;
               &:hover {
                 cursor: pointer;
                 transform: scale(1.1);
@@ -47,13 +47,9 @@ main {
           align-items: center;
           justify-content: space-around;
           text-transform: uppercase;
-          .title {
-          }
           .location {
             :last-child {
               margin-left: 15px;
-            }
-            span {
             }
           }
         }
